welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var tours: Int = 0
var x: Int = 0
for (tours<- 1 to 6){
  for (x<-1 to 3){avance()}